--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -1,76 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sling Scheduler</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <main class="page">
-      <header class="topbar">
-        <h1>Sling Scheduler</h1>
-        <p>Single-occurrence updates with audit-friendly API responses.</p>
-      </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sling Schedule Manager</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Sling Schedule Manager</h1>
 
-      <section class="controls card">
-        <label for="dateInput">Date</label>
-        <input id="dateInput" type="date" required />
-        <button id="searchBtn" type="button">Load Schedule</button>
-      </section>
-
-      <section id="flash" class="flash" aria-live="polite"></section>
-
-      <section class="card" id="teamsSection" hidden>
-        <div class="section-head">
-          <h2>Teams</h2>
-          <div class="actions">
-            <button id="bulkEditBtn" type="button">Edit All</button>
-            <button id="bulkSaveBtn" type="button" hidden>Save All</button>
-            <button id="bulkCancelBtn" type="button" hidden>Cancel</button>
-          </div>
+        <div class="search-section">
+            <label for="dateInput">Select Date:</label>
+            <input type="date" id="dateInput" required>
+            <button id="searchBtn" onclick="searchSchedule()">Search</button>
         </div>
-        <div class="table-wrap">
-          <table id="teamsTable">
+
+        <div class="loading" id="loadingIndicator">Loading shifts...</div>
+        <div class="error" id="errorMessage"></div>
+        <div class="success" id="successMessage"></div>
+        <div class="warning" id="warningMessage">
+            <div class="warning-text" onclick="toggleUnmatchedShifts()" style="cursor: pointer;">
+                <span id="warningText"></span>
+                <span class="warning-arrow" id="warningArrow">▼</span>
+            </div>
+            <div class="unmatched-shifts" id="unmatchedShiftsContainer"></div>
+        </div>
+        <div class="no-results" id="noResults">No shifts found for this date.</div>
+
+        <div class="bulk-controls" id="bulkControls" style="display: none;">
+            <button class="btn-edit-all" id="editAllBtn" onclick="enterBulkEditMode()">Edit All</button>
+            <button class="btn-update-all" id="updateAllBtn" onclick="updateAllTeams()" style="display: none;">Update All</button>
+            <button class="btn-cancel-all" id="cancelAllBtn" onclick="cancelBulkEdit()" style="display: none;">Cancel</button>
+        </div>
+
+        <table id="resultsTable">
             <thead>
-              <tr>
-                <th>Team</th>
-                <th>Main</th>
-                <th>Assist</th>
-                <th>Start</th>
-                <th>End</th>
-                <th>Status</th>
-                <th>Action</th>
-              </tr>
+                <tr>
+                    <th>Team</th>
+                    <th>Main</th>
+                    <th>Assist</th>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                </tr>
             </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </section>
+            <tbody id="tableBody"></tbody>
+        </table>
+    </div>
 
-      <section class="card" id="unmatchedSection" hidden>
-        <div class="section-head">
-          <h2>Unmatched Shifts</h2>
-          <p class="caption">Shifts in Sling with no team mapping in Caspio.</p>
+    <div class="modal-overlay" id="modalOverlay">
+        <div class="modal-content" id="modalContent">
+            <h3 id="modalMessage">Processing Request</h3>
+            <div class="loader" id="modalLoader"></div>
+            <div class="success-icon" id="modalSuccess" style="display: none;">✓</div>
+            <div class="error-icon" id="modalError" style="display: none;">✕</div>
         </div>
-        <div class="table-wrap">
-          <table id="unmatchedTable">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Start</th>
-                <th>End</th>
-                <th>Status</th>
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </section>
-    </main>
+    </div>
 
     <script src="./config.js"></script>
-    <script type="module" src="./main.js"></script>
-  </body>
+    <script src="./main.js"></script>
+</body>
 </html>
