--- a/pastVersions/V1.html
+++ b/pastVersions/V1.html
@@ -629,7 +629,7 @@
         let bulkEditOriginalValues = {}; // Store original values for all teams during bulk edit
         
         const CASPIO_BASE_URL = 'https://c0ebl152.caspio.com/rest/v2';
-        const MAKE_WEBHOOK_URL = 'https://hook.us1.make.com/gcvwhpnw7fr8ptbg8d3dop5qyhmz6uqr';
+        const MAKE_WEBHOOK_URL = 'https://hook.us1.make.com/<your-make-webhook-id>';
 
         // ========== CASPIO TOKEN MANAGEMENT ==========
         
@@ -1361,7 +1361,7 @@
                     headers: {
                         'Content-Type': 'application/json',
                         'Accept': '*/*',
-                        'Authorization': 'fbea7cd696b24dec92fcc1602d3ee79c'
+                        'Authorization': 'REPLACE_WITH_SLING_TOKEN'
                     }
                 });
 
