--- a/pastVersions/V2.html
+++ b/pastVersions/V2.html
@@ -629,9 +629,9 @@
         let bulkEditOriginalValues = {}; // Store original values for all teams during bulk edit
         
         const CASPIO_BASE_URL = 'https://c0ebl152.caspio.com/rest/v2';
-        const MAKE_WEBHOOK_URL = 'https://hook.us1.make.com/gcvwhpnw7fr8ptbg8d3dop5qyhmz6uqr';
-        const SLING_PROXY_WEBHOOK = 'https://hook.us1.make.com/kzst147pm4dchchz35xmjfyhwvahnc5g';
-        const SLING_TOKEN = 'fbea7cd696b24dec92fcc1602d3ee79c';
+        const MAKE_WEBHOOK_URL = 'https://hook.us1.make.com/<your-make-webhook-id>';
+        const SLING_PROXY_WEBHOOK = 'https://hook.us1.make.com/<your-sling-proxy-webhook-id>';
+        const SLING_TOKEN = 'REPLACE_WITH_SLING_TOKEN';
 
         // ========== CASPIO TOKEN MANAGEMENT ==========
         
